<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/more_layout">

        <TextView
            android:text="@string/more_manage_pens"
            android:textColor="@android:color/black"
            app:drawableStartCompat="@drawable/ic_pen_accent_24dp"
            android:id="@+id/manage_pen_tv"
            android:drawablePadding="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

        <TextView
            android:text="@string/more_manage_drugs"
            android:textColor="@android:color/black"
            app:drawableStartCompat="@drawable/ic_accent_color_drug_24dp"
            android:id="@+id/manage_drugs_tv"
            android:drawablePadding="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

        <TextView
            android:text="@string/more_manage_rations"
            android:textColor="@android:color/black"
            app:drawableStartCompat="@drawable/ic_baseline_ration_24"
            android:id="@+id/manage_rations_tv"
            android:drawablePadding="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

        <TextView
            android:text="@string/more_archives"
            android:textColor="@android:color/black"
            app:drawableStartCompat="@drawable/ic_archive_accent_24dp"
            android:id="@+id/archives_tv"
            android:drawablePadding="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />


        <TextView
            android:text="@string/more_settings"
            app:drawableStartCompat="@drawable/ic_settings_accent_24dp"
            android:textColor="@android:color/black"
            android:drawablePadding="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="16sp"
            android:id="@+id/more_settings_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <View
            android:background="@android:color/darker_gray"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />

    </LinearLayout>

</ScrollView>