<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustResize"
    tools:context=".presentation.add_drugs_given_to_specific_cow.AddDrugsGivenToSpecificCowActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/drugs"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/no_drugs_added_to_specific_cow"
                android:textSize="16sp"
                android:textColor="@color/redText"
                android:visibility="gone"
                android:text="@string/add_drugs_first"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/drug_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="52dp">

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:weightSum="2"
        android:layout_gravity="bottom"
        app:layout_behavior="com.trevorwiebe.trackacow.domain.utils.MoveUpwardsBehavior"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_drug_cancel_button"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@color/colorAccent"
            android:background="@android:color/white"
            style="?buttonBarButtonStyle" />

        <Button
            android:id="@+id/add_drug_save_button"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            style="?buttonBarButtonStyle" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>