<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentDark"
    tools:context=".presentation.create_account.CreateAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="36dp"
        android:paddingRight="36dp">

        <TextView
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:gravity="center"
            android:labelFor="@id/create_account_name"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/create_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/white"
            android:drawableTint="@android:color/white"
            android:inputType="textCapWords"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@null"
            android:theme="@style/TextLabel"
            android:autofillHints="username" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:labelFor="@id/create_account_email"
            android:text="@string/email"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/create_account_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/white"
            android:drawableTint="@android:color/white"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@null"
            android:theme="@style/TextLabel"
            android:autofillHints="emailAddress" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:labelFor="@id/create_account_password"
            android:text="@string/password"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/create_account_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/white"
            android:drawableTint="@android:color/white"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textCursorDrawable="@null"
            android:theme="@style/TextLabel" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/create_account_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/white_sign_in_btn"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:text="@string/create_account"
                android:textColor="@color/colorAccent" />

            <ProgressBar
                android:id="@+id/creating_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:translationZ="10dp"
                android:visibility="invisible" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/create_account_with_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/accent_sign_in_btn"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:text="@string/create_account_with_google"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/creating_account_with_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/lightGray"
                android:translationZ="10dp"
                android:visibility="invisible" />

        </FrameLayout>

    </LinearLayout>

</ScrollView>